Add extra styles to index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Main navigation section, with links -->
         <div class="navbar-col nav-section-main">
             <div class="navigation-list">
-                <a href="#">Home</a>
+                <a href="#" class="selected">Home</a>
                 <a href="./products.html">Products</a>
                 <a href="./cart.html">Basket</a>
             </div>
@@ -37,7 +37,7 @@
             <div class="intro-card">
                 <h2>Welcome to the UCLan Shop</h2>
                 <p>To buy some clothes or simply browse the selection, press the button below.</p>
-                <button>See Products</button>
+                <a href="./products.html"><button>See Products</button></a>
             </div>
         </div>
 
