Added button now responds to success

--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
         <p id="total-price"><b>Total Cost:</b> £price</p>
     </div>
 
-    <div class="flex-content-center">
+    <div class="flex-content-center cart-bottom">
         <button class="checkout-button">Checkout</button>
         <p>
             Forgotten something?
