--- a/item.html
+++ b/item.html
@@ -46,9 +46,9 @@
                 <img id="item-img" src="" alt="">
             </div>
             <div class="col-40">
-                <h2 id="item-title">Title</h2>
-                <p id="item-price">£price</p>
-                <p id="item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, dolores eum magni a vitae explicabo obcaecati id, nam quaerat deleniti quis, tenetur vero nobis impedit dignissimos enim cupiditate consectetur soluta.</p>
+                <h2 id="item-title">Loading...</h2>
+                <p id="item-price"></p>
+                <p id="item-desc"></p>
                 <button id="item-cart-button">Add To Cart</button>
             </div>
         </div>
