Add responsive design to all pages

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="navbar-clearfix"></div>
     <div class="navbar">
         <!-- Navigation logo -->
-        <div class="navbar-col">
-            <p class="nav-logo">UCLan Shop</p>
+        <div class="navbar-col hidden-sm">
+            <p class="nav-logo">UCLan Student Shop</p>
         </div>
         <!-- Main navigation section, with links -->
         <div class="navbar-col nav-section-main">
@@ -28,14 +28,14 @@
             </div>
         </div>
         <!-- Spacer -->
-        <div class="navbar-col"></div>
+        <div class="navbar-col hidden-sm"></div>
     </div>
 
     <!-- Introduction (landing) Section -->
     <div class="intro-section row">
         <div class="col-40 flex-content-center">
             <div class="intro-card">
-                <h2>Welcome to the UCLan Shop</h2>
+                <h2>Welcome to the UCLan Student Shop</h2>
                 <p>To buy some clothes or simply browse the selection, press the button below.</p>
                 <a href="./products.html"><button>See Products</button></a>
             </div>
@@ -48,15 +48,16 @@
 
     <!-- Popular items section -->
     <div class="popular-section">
-        <h2>Popular Items</h2>
+        <h2>Welcome to the UCLan Student Union Shop!</h2>
         <h3>Have a look at some of our most popular items, or go to our <br> products page and see the entire selection!</h3>
-        <!-- TODO: Add some product images here -->
-        <div></div>
+        <div>
+            <iframe src="https://www.youtube.com/embed/iTBQHj7L2-8"></iframe>
+        </div>
     </div>
 
     <!-- Site footer -->
     <footer>
-        <p>UCLan Shop 2024</p>
+        <img src="assets/images/logo.svg" alt="">
     </footer>
 </body>
 </html>
