--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
     <div class="navbar">
         <!-- Navigation logo -->
         <div class="navbar-col hidden-sm">
-            <p class="nav-logo">UCLan Shop</p>
+            <p class="nav-logo">UCLan Student Shop</p>
         </div>
         <!-- Main navigation section, with links -->
         <div class="navbar-col nav-section-main">
@@ -89,7 +89,7 @@
 
     <!-- Site footer -->
     <footer>
-        <p>UCLan Shop 2024</p>
+        <img src="assets/images/logo.svg" alt="">
     </footer>
 
     <!-- Import product data and scripts -->
