--- a/item.html
+++ b/item.html
@@ -16,8 +16,8 @@
     <div class="navbar-clearfix"></div>
     <div class="navbar">
         <!-- Navigation logo -->
-        <div class="navbar-col">
-            <p class="nav-logo">UCLan Shop</p>
+        <div class="navbar-col hidden-sm">
+            <p class="nav-logo">UCLan Student Shop</p>
         </div>
         <!-- Main navigation section, with links -->
         <div class="navbar-col nav-section-main">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <!-- Spacer -->
-        <div class="navbar-col"></div>
+        <div class="navbar-col hidden-sm"></div>
     </div>
 
     <!-- Breadcrumbs -->
@@ -56,7 +56,7 @@
 
     <!-- Site footer -->
     <footer>
-        <p>UCLan Shop 2024</p>
+        <img src="assets/images/logo.svg" alt="">
     </footer>
 
     <!-- Import product data and scripts -->
