Fix all validation errors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="intro-card">
                 <h2>Welcome to the UCLan Student Shop</h2>
                 <p>To buy some clothes or simply browse the selection, press the button below.</p>
-                <a href="./products.html"><button>See Products</button></a>
+                <button onclick="location.href = './products.html';">See Products</button>
             </div>
         </div>
 
