--- a/item.html
+++ b/item.html
@@ -43,7 +43,7 @@
     <div id="item-content">
         <div class="row item-content-container">
             <div class="col-60">
-                <img id="item-img" src="" alt="">
+                <img id="item-img" src="assets/images/hoodies/hoodie%20(1)%20jpg" alt="Product Image">
             </div>
             <div class="col-40">
                 <h2 id="item-title">Loading...</h2>
