Finalise all code changes and documentation

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </div>
     </div>
 
-    <!-- Popular items section -->
-    <div class="popular-section">
+    <!-- Extra information section -->
+    <div class="info-section">
         <h2>Welcome to the UCLan Student Union Shop!</h2>
-        <h3>Have a look at some of our most popular items, or go to our <br> products page and see the entire selection!</h3>
+        <h3>Have a look at the video below for information about UCLan, or go to our <br> <a href="./products.html">products page</a> and see the entire product selection!</h3>
         <div>
             <iframe src="https://www.youtube.com/embed/iTBQHj7L2-8"></iframe>
         </div>
